third_party/move/move-compiler-v2/transactional-tests/tests/operator_eval/underscore_v1.operator-eval-lang-2.exp
processed 7 tasks

task 0 'publish'. lines 1-77:
Error: compilation errors:
 error: undeclared `_`
  ┌─ TEMPFILE:7:17
  │
7 │         let x = _ + 3;
  │                 ^

error: undeclared `_`
  ┌─ TEMPFILE:8:13
  │
8 │         x + _
  │             ^

error: undeclared `_`
   ┌─ TEMPFILE:12:17
   │
12 │         let x = _ + 3;
   │                 ^

error: undeclared `_`
   ┌─ TEMPFILE:13:13
   │
13 │         _ = _ + 1;
   │             ^

error: undeclared `_`
   ┌─ TEMPFILE:14:13
   │
14 │         x + _
   │             ^

error: undeclared `_`
   ┌─ TEMPFILE:18:13
   │
18 │         _ = _ + 2;
   │             ^

error: undeclared `_`
   ┌─ TEMPFILE:19:9
   │
19 │         _
   │         ^

error: undeclared `_`
   ┌─ TEMPFILE:23:13
   │
23 │         _ = _ + 3;
   │             ^

error: undeclared `_`
   ┌─ TEMPFILE:24:9
   │
24 │         _
   │         ^

error: undeclared `_`
   ┌─ TEMPFILE:28:10
   │
28 │          _
   │          ^



task 1 'run'. lines 79-79:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}

task 2 'run'. lines 81-81:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}

task 3 'run'. lines 83-83:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}

task 4 'run'. lines 85-85:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}

task 5 'run'. lines 87-99:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}

task 6 'run'. lines 101-101:
Error: Function execution failed with VMError: {
    message: Linker Error: Module 0000000000000000000000000000000000000000000000000000000000c0ffee::m doesn't exist,
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
    exec_state: None,
}
